--- a/homeetc/about.css
+++ b/homeetc/about.css
@@ -6,7 +6,6 @@
 
     body {
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
         width: 100vw;
         color: #333;
     }
@@ -17,11 +16,17 @@
     }
 
     .info-section {
-        background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
         width: 100vw;
         height: auto;
         margin-top: 100px;
         padding: 100px;
+        
+            background-image: url(/lms/pngwing.com.png);
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+            background-attachment: fixed;
+            min-height: 100vh;
     }
 
     header {
@@ -74,11 +79,14 @@
     }
 
     .section-heading {
+        background-color: rgba(196, 199, 201, 0.825);
         display: flex;
         align-items: center;
         font-size: 24px;
         margin-bottom: 30px;
-        color: white;
+        color: #667eea;
+        border-radius: 10px;
+        padding: 15px;
     }
 
     .section-heading span {
@@ -91,7 +99,7 @@
 
     .section-heading strong {
         font-weight: bold;
-        color: white;
+        color: #667eea;
     }
 
     .section-heading.dual {
@@ -121,6 +129,9 @@
         font-size: 18px;
         color: black;
         min-width: 300px;
+        background-color: rgba(228, 230, 232, 0.708);
+        padding: 10px;
+        border-radius: 10px;
     }
 
     .features {
