--- a/homeetc/reg-login.css
+++ b/homeetc/reg-login.css
@@ -11,6 +11,13 @@
      display: flex;
      justify-content: center;
      align-items: center;
+     
+            background-image: url(/lms/pngwing.com.png);
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+            background-attachment: fixed;
+            min-height: 100vh;
  }
 
  .login-container {
