--- a/homeetc/homecss.css
+++ b/homeetc/homecss.css
@@ -84,7 +84,7 @@
         }
 
         .btn-signup:hover {
-            background-color: #764ba2;
+            background-color: #b3b3b3d5;
         }
 
         .hero {
