--- a/homeetc/contact.css
+++ b/homeetc/contact.css
@@ -9,6 +9,13 @@
         background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
         width: 100vw;
         color: #333;
+        
+            background-image: url(/lms/pngwing.com.png);
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+            background-attachment: fixed;
+            min-height: 100vh;
     }
 
     html,
@@ -17,10 +24,11 @@
     }
 
     .info-section {
-        background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
         width: 100vw;
         height: auto;
         padding: 100px;
+        box-shadow: 0 0 10px rgba(55, 55, 55, 0.545);
+
     }
 
     header {
@@ -107,6 +115,7 @@
     border-radius: 6px;
     font-size: 16px;
     font-family: inherit;
+    max-width: 100%;
 }
 
 .contact-form input:focus,
